added FLUENTD_UID and pipe to stdout

--- a/fluentd-daemonset-elasticsearch-rbac.yaml
+++ b/fluentd-daemonset-elasticsearch-rbac.yaml
@@ -1,3 +1,4 @@
+#https://supergiant.io/blog/cluster-level-logging-in-kubernetes-with-fluentd/
 ---
 apiVersion: v1
 kind: ServiceAccount
@@ -61,17 +62,19 @@ spec:
         image: fluent/fluentd-kubernetes-daemonset:elasticsearch
         env:
           - name:  FLUENT_ELASTICSEARCH_HOST
-            value: "elasticsearch-logging"
+            value: "elasticsearch.logging.svc.cluster.local"
           - name:  FLUENT_ELASTICSEARCH_PORT
             value: "9200"
           - name: FLUENT_ELASTICSEARCH_SCHEME
             value: "http"
+          - name: FLUENT_UID
+            value: "0"
           # X-Pack Authentication
           # =====================
-          - name: FLUENT_ELASTICSEARCH_USER
-            value: "elastic"
-          - name: FLUENT_ELASTICSEARCH_PASSWORD
-            value: "changeme"
+          #- name: FLUENT_ELASTICSEARCH_USER
+          #  value: "elastic"
+          #- name: FLUENT_ELASTICSEARCH_PASSWORD
+          #  value: "changeme"
         resources:
           limits:
             memory: 200Mi
@@ -86,6 +89,9 @@ spec:
           readOnly: true
       terminationGracePeriodSeconds: 30
       volumes:
+      - name: config-volume
+        configMap:
+          name: fluentd-conf
       - name: varlog
         hostPath:
           path: /var/log
