--- a/fluentd-daemonset-elasticsearch-rbac.yaml
+++ b/fluentd-daemonset-elasticsearch-rbac.yaml
@@ -82,6 +82,9 @@ spec:
             cpu: 100m
             memory: 200Mi
         volumeMounts:
+        - name: config-volume
+          mountPath: /fluentd/etc/kubernetes.conf
+          subPath: kubernetes.conf
         - name: varlog
           mountPath: /var/log
         - name: varlibdockercontainers
